       blueprint object being given, not relying on the program.
       This allows the handling of inherited blueprint objects with replaced
       programs. (Bug #483)
  - (simulate.c) replace_program(): If the program of a blueprint is replaced,
       the old program's blueprint pointer is NULLed out as it is no longer
       accurate. (Bug #483)

03-Oct-2007 (Lars Duening)
  - (mapping.c, object.c) Removed C-99 features.

01-Oct-2007 (Gnomi)
  - (mapping.c) resize_mapping() didn't check for destructed objects as keys,
      which made operations like map-([0]) after an object destruction
      potentially fatal (Bug #517).

30-Sep-2007 (Lars Duening)  (3.3.715)
  - Created snapshot.

04-Nov-2006 (Lars Duening, Philip Hancke)
  - (pkg-tls, main.c) Added new options --tls-crlfile and --tls-crldirectory
       to hold the Certificate Revocation information.
  - (pkg-tls, func_spec) New efun tls_refresh_certs() to reload the
       certificates and certificate revocations.

09-Jul-2006 (Lars Duening)  (3.3.714)
  - Created snapshot.

14-Jun-2006 (Lars Duening)
  - (array.c) Removed a memory leak when array intersection or subtraction
       failed.
  - (mapping, array, interpret.c, prolang.y) Implemented the array/mapping
       intersection.

12-Jun-2006 (Lars Duening)
  - Oh dear, has it been that long?
  - (make_func.y) Modified a case of undefined behaviour in the creation
       of the character classification tables: only 'unsigned char' types have
       a defined overflow behaviour (thanks, Erik!)
  - (configure) -fno-force-mem is deprecated.

09-May-2006 (Lars Duening)
  - (xalloc.c) If the driver runs low on memory, it also prints the
       current object and program in the low-on-memory message.

06-May-2006 (Lars Duening)
  - (pkg-tls) New efuns hash() and hmac() offer flexible hash and HMAC
       calculation if the driver is compiled to use OpenSSL (provided by
       Philipp).
  - (pkg-tls.c) Removed a compilation error occuring with GnuTLS.