@@ -11,4 +11,12 @@ directory first.
   secure.inc : a replacement for the original secure/simul_efun/secure.inc,
                so that the security-sensitive functions can be tested, too.
 
+Mudlib modifications:
+ - /secure/simul_efun/ run: echo // > secure.inc (remove nomask simul efun)
+ - /secure/master/ edit compiler_control.inc and add a "return 1;" at the
+   beginning of the privileg_violation" function.  create new directory
+   /save/crash/ 
+
+Load crasher.c, let it run and wait for the crash... 
+
 Written by Andreas "Menaures"  Klauer.
